{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 6,
  "lineage": "a82d7279-855d-3b4a-a884-7625035798f1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:936301010316:vpc/vpc-0595dadbc6f769ef5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00f96921f38d7efa2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02bbad37fec0ee405",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0595dadbc6f769ef5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c825b345f5f5e911",
            "owner_id": "936301010316"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/test-pbN9Ug/3772f365b6b9a5c1",
            "arn_suffix": "app/test-pbN9Ug/3772f365b6b9a5c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-pbN9Ug-948446239.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/test-pbN9Ug/3772f365b6b9a5c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-pbN9Ug",
            "security_groups": [
              "sg-0346e5a8dded09db9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b2b9b9cd8cd84bf"
              },
              {
                "subnet_id": "subnet-0a128ab0d415118ee"
              },
              {
                "subnet_id": "subnet-0b08850f6b4bcf527"
              }
            ],
            "subnets": [
              "subnet-01b2b9b9cd8cd84bf",
              "subnet-0a128ab0d415118ee",
              "subnet-0b08850f6b4bcf527"
            ],
            "vpc_id": "vpc-0595dadbc6f769ef5",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "data.aws_subnets.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener/app/test-pbN9Ug/3772f365b6b9a5c1/2b1a39e24ad28438",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener/app/test-pbN9Ug/3772f365b6b9a5c1/2b1a39e24ad28438",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/test-pbN9Ug/3772f365b6b9a5c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "module.alb.aws_lb.example",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:936301010316:security-group/sg-0346e5a8dded09db9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0346e5a8dded09db9",
            "ingress": [],
            "name": "test-pbN9Ug",
            "name_prefix": "",
            "owner_id": "936301010316",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0595dadbc6f769ef5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3897349052",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0346e5a8dded09db9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2156910594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0346e5a8dded09db9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}